roundcube/roundcubedb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubedb
  namespace: roundcube
  labels:
    service: roundcubedb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubedb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubedb
    spec:
      containers:
      - name: roundcubedb
        image: postgres:alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: roundcubedb-pvc
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: roundcubedb-pvc
        persistentVolumeClaim:
          claimName: roundcubedb-pvc
