roundcube/roundcubemail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubemail
  namespace: roundcube
  labels:
    service: roundcubemail
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubemail
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubemail
    spec:
      containers:
      - name: roundcubemail
        image: roundcube/roundcubemail:latest-fpm-alpine
        imagePullPolicy: ""
        env: &env
        - name: ROUNDCUBEMAIL_DB_TYPE
          value: pgsql
        - name: ROUNDCUBEMAIL_DB_HOST
          value: roundcubedb
        - name: ROUNDCUBEMAIL_DB_NAME
          value: roundcube
        - name: ROUNDCUBEMAIL_DB_USER
          valueFrom:
            secretKeyRef:
              name: roundcubemail-shared-secret
              key: DB_USER
        - name: ROUNDCUBEMAIL_DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: roundcubemail-shared-secret
              key: DB_PASSWORD
        - name: ROUNDCUBEMAIL_DES_KEY
          valueFrom:
            secretKeyRef:
              name: roundcubemail-shared-secret
              key: DES_KEY
        - name: ROUNDCUBEMAIL_DEFAULT_HOST
          value: tls://mail.michaelthomson.dev
        - name: ROUNDCUBEMAIL_DEFAULT_PORT
          value: "993"
        - name: ROUNDCUBEMAIL_SMTP_SERVER
          value: tls://mail.michaelthomson.dev
        - name: ROUNDCUBEMAIL_SMTP_PORT
          value: "465"
        - name: ROUNDCUBEMAIL_SKIN
          value: elastic
        - name: ROUNDCUBEMAIL_PLUGINS
          value: archive,zipdownload,newmail_notifier
        ports:
        - containerPort: 9000
        volumeMounts:
        - mountPath: /var/www/html
          name: www-data
        - mountPath: /tmp/roundcube-temp
          name: temp-data
      restartPolicy: Always
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: temp-data
        persistentVolumeClaim:
          claimName: roundcubemail-temp-pvc
