roundcube/roundcubenginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roundcubenginx
  namespace: roundcube
  labels:
    service: roundcubenginx
spec:
  replicas: 1
  selector:
    matchLabels:
      service: roundcubenginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: roundcubenginx
    spec:
      containers:
      - name: roundcubenginx
        image: nginx:alpine
        imagePullPolicy: ""
        ports:
        - containerPort: 80
        volumeMounts:
        - name: www-data
          mountPath: /var/www/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-data
        persistentVolumeClaim:
          claimName: roundcubemail-www-pvc
      - name: nginx-config
        configMap:
          name: roundcubenginx-config
