roundcube/roundcubemail-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roundcubemail
  namespace: roundcube
  labels:
    service: roundcubemail
spec:
  ports:
  - port: 9000
    protocol: TCP
    name: http
  selector:
    service: roundcubemail
