roundcube/roundcubenginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: roundcubenginx-ingress
  namespace: roundcube
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    service: roundcubenginx
spec:
  rules:
  - host: roundcube.michaelthomson.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: roundcubenginx
            port: 
              name: http
  tls:
    - hosts:
        - roundcube.michaelthomson.dev
      secretName: letsencrypt-wildcard-cert-michaelthomson.dev
